[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "mcp[cli]>=1.12.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "stravalib>=2.4",
    "uvicorn>=0.35.0",
]
